--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       text-align: center;
     }
   </style>
-  <body style="background-color:white;">
+  <body style="background-color:LightSteelBlue;">
     <h1 id="my-header">Style is important</h1>
-    <p style="background-color:#617d91;">Proper HTML style is important</p>
+    <p style="background-color:#ffffff;">Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
     <p>
       <a href="./cities.html">My cities page</a>
