--- a/cities.html
+++ b/cities.html
@@ -33,18 +33,18 @@
     <!-- Multiple elements with same class -->
     <h2 class="city">Ottawa</h2>
     <p>Ottawa is the capital of Canada.</p>
-    <img src="./images/flag-of-Canada.png" alt="canada">
+    <img src="./images/flag-of-Canada.png" alt="Canada">
+
+    <h2 class="city">Tokyo</h2>
+    <p>Tokyo is the capital of Japan.</p>
+    <img src="./images/flag-of-Japan.png" alt="Japan">
+
+    <h2 class="city">Seoul</h2>
+    <p>Seoul is the capital of South Korea.</p>
+    <img src="./images/flag-of-Korea-South.png" alt="South Korea">
 
     <h2 class="city">London</h2>
-    <p>London is the capital of England.</p>
-    <img src="./images/flag-of-United-Kingdom.png" alt="UK">
-
-    <h2 class="city">Paris</h2>
-    <p>Paris is the capital of France.</p>
-    <img src="./images/flag-of-France.png" alt="France">
-
-    <h2 class="city">Vatican City</h2>
-    <p>Vatican City is the capital of Vatican City.</p>
-    <img src="./images/flag-of-Vatican-City.png" alt="Vatican City">
+    <p>London is the capital of United Kingdom.</p>
+    <img src="./images/flag-of-United-Kingdom.png" alt="United-Kingdom">
   </body>
 </html>
